--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ pandas>=1.3.0
 fpdf>=1.7.2
 pathlib>=1.0.1
 openpyxl>=3.1.0
-rich>=10.0.0  # For beautiful CLI formatting
+rich>=10.0.0  
 PyQt6>=6.4.0
-networkx>=2.6.0  # For component relationship visualization
+networkx>=2.6.0  
