--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@lucide/svelte": "^0.503.0",
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.11.0",
     "chart.js": "^4.4.9",
     "d3": "^7.9.0",
     "tailwindcss": "^4.1.4"
