--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.11.0",
     "chart.js": "^4.4.9",
     "d3": "^7.9.0",
+    "puppeteer": "^24.19.0",
     "tailwindcss": "^4.1.4"
   }
 }
