--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ sqlalchemy>=1.4.23
 alembic>=1.7.3
 python-multipart>=0.0.5
 pyyaml>=6.0
+# Authentication dependencies
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.5
