Add database.example.json and gitignore database.json
- Created example config file for database setup
- Added database.json to gitignore to prevent secrets in repo
- Removed database.json from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,13 @@ dist/
 frontend/dist/
 
 # --------------------------------
+# Configuration & Secrets
+# --------------------------------
+config/database.json
+*.env
+.env*
+
+# --------------------------------
 # IDE/Editor
 # --------------------------------
 .idea/
