--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,12 @@ uvicorn>=0.15.0
 pydantic>=1.8.2
 sqlalchemy>=1.4.23
 alembic>=1.7.3
+pymysql>=1.1.0
 python-multipart>=0.0.5
 pyyaml>=6.0
 # Authentication dependencies
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 python-multipart>=0.0.5
+# PDF generation
+reportlab>=3.6.0
