--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ networkx>=2.6.0
 fastapi>=0.68.0
 uvicorn>=0.15.0
 pydantic>=1.8.2
+email-validator>=2.0.0
 sqlalchemy>=1.4.23
 alembic>=1.7.3
 pymysql>=1.1.0
