feat: auto-generate damage + threat scenarios from assets (P0)
- core/generators/asset_type_mapper.py: AssetType→ComponentType, TrustZone mapping
- core/generators/damage_scenario_generator.py: CIA-based damage scenario generation
- core/generators/threat_scenario_generator.py: catalog matching + STRIDE→CIA linking
- core/generators/scenario_orchestrator.py: full pipeline orchestrator
- data/templates/damage_templates.json: CIA damage scenario templates
- api/routes/analysis.py: POST /generate-scenarios/{scope_id} endpoint
- tara-web: scenarioGeneratorApi.ts + Auto-Generate button on threat page
- tests: 32 unit tests passing

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@ project-info/
 # Do NOT track the local data directory or its contents
 # (analysis results, sample datasets, etc.)
 data/
-# Exception: curated threat catalog data ships with the app
+# Exception: curated data that ships with the app
 !data/threat_catalogs/
 !data/threat_catalogs/**
+!data/templates/
+!data/templates/**
 # But exclude raw STIX bundles (large, dev-only)
 data/threat_catalogs/ics-attack.json
 
